--- a/src/main/resources/br/edu/ufersa/ropke/locadoramaven/view/login.fxml
+++ b/src/main/resources/br/edu/ufersa/ropke/locadoramaven/view/login.fxml
@@ -12,13 +12,14 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.ufersa.ropke.locadoramaven.controller.LoginController">
    <children>
-      <GridPane layoutX="67.0" layoutY="62.0" prefHeight="276.0" prefWidth="467.0">
+      <GridPane layoutX="67.0" layoutY="62.0" prefHeight="293.0" prefWidth="467.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="166.0" minHeight="10.0" prefHeight="161.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="196.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="126.0" minHeight="10.0" prefHeight="73.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <GridPane prefHeight="120.0" prefWidth="181.0">
@@ -55,9 +56,9 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button onAction="#alterarSenha" style="-fx-background-color: transparent;" text="Esqueci a senha" GridPane.valignment="TOP">
+                  <Button onAction="#alterarSenha" style="-fx-background-color: transparent;" text="Esqueci a senha" underline="true" GridPane.valignment="TOP">
                      <font>
-                        <Font size="10.0" />
+                        <Font name="Pagul" size="18.0" />
                      </font>
                   </Button>
                   <Button onAction="#entrar" style="-fx-background-color: lightgray;" text="Entrar" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
@@ -67,6 +68,16 @@
                   </Button>
                </children>
             </GridPane>
+            <Label fx:id="usuarioNaoEncontrado" text="Usuário não encontrado" textFill="RED" visible="false" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP">
+               <font>
+                  <Font name="Pagul" size="18.0" />
+               </font>
+            </Label>
+            <Label fx:id="senhaIncorreta" text="Senha incorreta" textFill="RED" visible="false" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP">
+               <font>
+                  <Font name="Pagul" size="18.0" />
+               </font>
+            </Label>
          </children>
       </GridPane>
    </children>
