--- a/src/main/resources/br/edu/ufersa/ropke/locadoramaven/view/cliente_funcionario.fxml
+++ b/src/main/resources/br/edu/ufersa/ropke/locadoramaven/view/cliente_funcionario.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.ufersa.ropke.locadoramaven.controller.DiscoController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.ufersa.ropke.locadoramaven.controller.ClienteFuncionarioController">
    <children>
       <GridPane layoutX="8.0" layoutY="-1.0" prefHeight="394.0" prefWidth="586.0">
         <columnConstraints>
@@ -26,25 +26,13 @@
             <GridPane prefHeight="76.0" prefWidth="500.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button mnemonicParsing="false" onAction="#acessarLivros" style="-fx-background-color: lightgray lightgray;" text="Livros" GridPane.columnIndex="1" GridPane.halignment="CENTER">
-                     <font>
-                        <Font name="Pagul" size="18.0" />
-                     </font>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#acessarClientes" style="-fx-background-color: lightgray;" text="Clientes" GridPane.columnIndex="2" GridPane.halignment="CENTER">
-                     <font>
-                        <Font name="Pagul" size="18.0" />
-                     </font>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#sair" style="-fx-background-color: lightgray;" text="Sair" GridPane.columnIndex="3" GridPane.halignment="CENTER">
+                  <Button mnemonicParsing="false" onAction="#sair" style="-fx-background-color: lightgray;" text="Sair" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                      <font>
                         <Font name="Pagul" size="18.0" />
                      </font>
@@ -63,7 +51,7 @@
                               <Font name="Pagul" size="14.0" />
                            </font>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#cadastrarDisco" prefHeight="26.0" prefWidth="144.0" style="-fx-background-color: lightgray;" text="Cadastrar disco" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                        <Button mnemonicParsing="false" onAction="#cadastrarCliente" prefHeight="26.0" prefWidth="144.0" style="-fx-background-color: lightgray;" text="Cadastrar cliente" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                            <font>
                               <Font name="Pagul" size="14.0" />
                            </font>
@@ -81,17 +69,17 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label text="Pesquisar disco" GridPane.halignment="CENTER" />
-                  <TextField fx:id="pesquisaDisco" style="-fx-background-color: darkgray;" GridPane.columnIndex="1" />
+                  <Label text="Pesquisar cliente" GridPane.halignment="CENTER" />
+                  <TextField fx:id="pesquisaCliente" style="-fx-background-color: darkgray;" GridPane.columnIndex="1" />
                </children>
             </GridPane>
-            <TableView fx:id="tabelaDiscos" prefHeight="282.0" prefWidth="586.0" style="-fx-background-color: darkgray;" GridPane.rowIndex="2">
+            <TableView fx:id="tabelaClientes" prefHeight="282.0" prefWidth="586.0" style="-fx-background-color: darkgray;" GridPane.rowIndex="2">
               <columns>
-                <TableColumn fx:id="colunaTitulo" prefWidth="75.0" text="Título" />
-                <TableColumn fx:id="colunaBanda" prefWidth="75.0" text="Banda" />
-                  <TableColumn fx:id="colunaEstilo" prefWidth="75.0" text="Estilo" />
-                  <TableColumn fx:id="colunaQuantidade" prefWidth="87.0" text="Quantidade disponível" />
-                  <TableColumn fx:id="colunaValorAluguel" prefWidth="146.0" text="Valor do aluguel" />
+                <TableColumn fx:id="colunaNome" prefWidth="75.0" text="Nome" />
+                <TableColumn fx:id="colunaCpf" prefWidth="75.0" text="CPF" />
+                  <TableColumn fx:id="colunaEndereco" prefWidth="75.0" text="Endereco" />
+                  <TableColumn fx:id="colunaEmail" prefWidth="87.0" text="Email" />
+                  <TableColumn fx:id="colunaTelefone" prefWidth="146.0" text="Telefone" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
