--- a/src/main/resources/br/edu/ufersa/ropke/locadoramaven/view/cliente_funcionario.fxml
+++ b/src/main/resources/br/edu/ufersa/ropke/locadoramaven/view/cliente_funcionario.fxml
@@ -48,12 +48,12 @@
                      <children>
                         <Button mnemonicParsing="false" onAction="#irParaTelaPrincipal" style="-fx-background-color: lightgray;" text="Ir para tela principal" GridPane.halignment="CENTER">
                            <font>
-                              <Font name="Pagul" size="14.0" />
+                              <Font name="Pagul" size="18.0" />
                            </font>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#cadastrarCliente" prefHeight="26.0" prefWidth="144.0" style="-fx-background-color: lightgray;" text="Cadastrar cliente" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                        <Button mnemonicParsing="false" onAction="#cadastrarCliente" prefHeight="33.0" prefWidth="186.0" style="-fx-background-color: lightgray;" text="Cadastrar cliente" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                            <font>
-                              <Font name="Pagul" size="14.0" />
+                              <Font name="Pagul" size="18.0" />
                            </font>
                         </Button>
                      </children>
@@ -62,8 +62,9 @@
             </GridPane>
             <GridPane prefHeight="30.0" prefWidth="589.0" GridPane.rowIndex="1">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="288.0" minWidth="10.0" prefWidth="167.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="438.0" minWidth="10.0" prefWidth="422.0" />
+                <ColumnConstraints hgrow="SOMETIMES" />
+                <ColumnConstraints hgrow="SOMETIMES" />
+                  <ColumnConstraints hgrow="SOMETIMES" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -71,6 +72,27 @@
                <children>
                   <Label text="Pesquisar cliente" GridPane.halignment="CENTER" />
                   <TextField fx:id="pesquisaCliente" style="-fx-background-color: darkgray;" GridPane.columnIndex="1" />
+                  <GridPane GridPane.columnIndex="2">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#pesquisar" style="-fx-background-color: lightgray;" text="Pesquisar" GridPane.halignment="CENTER">
+                           <font>
+                              <Font name="Pagul" size="18.0" />
+                           </font>
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#atualizar" style="-fx-background-color: lightgray;" text="Atualizar" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                           <font>
+                              <Font name="Pagul" size="18.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </GridPane>
                </children>
             </GridPane>
             <TableView fx:id="tabelaClientes" prefHeight="282.0" prefWidth="586.0" style="-fx-background-color: darkgray;" GridPane.rowIndex="2">
