--- a/src/main/resources/br/edu/ufersa/ropke/locadoramaven/view/principal_gerente.fxml
+++ b/src/main/resources/br/edu/ufersa/ropke/locadoramaven/view/principal_gerente.fxml
@@ -59,8 +59,9 @@
             </GridPane>
             <GridPane prefHeight="30.0" prefWidth="589.0" GridPane.rowIndex="1">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="288.0" minWidth="10.0" prefWidth="167.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="438.0" minWidth="10.0" prefWidth="422.0" />
+                <ColumnConstraints hgrow="SOMETIMES" />
+                <ColumnConstraints hgrow="SOMETIMES" />
+                  <ColumnConstraints hgrow="SOMETIMES" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -68,6 +69,27 @@
                <children>
                   <Label text="Pesquisar empréstimo" GridPane.halignment="CENTER" />
                   <TextField fx:id="pesquisaEmprestimo" style="-fx-background-color: darkgray;" GridPane.columnIndex="1" />
+                  <GridPane GridPane.columnIndex="2">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#pesquisar" style="-fx-background-color: lightgray;" text="Pesquisar" GridPane.halignment="CENTER">
+                           <font>
+                              <Font name="Pagul" size="18.0" />
+                           </font>
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#atualizar" style="-fx-background-color: lightgray;" text="Atualizar" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                           <font>
+                              <Font name="Pagul" size="18.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </GridPane>
                </children>
             </GridPane>
             <TableView fx:id="tabelaEmprestimos" prefHeight="200.0" prefWidth="589.0" style="-fx-background-color: darkgray;" GridPane.rowIndex="2">
@@ -84,9 +106,9 @@
             </TableView>
             <GridPane prefHeight="30.0" prefWidth="600.0" GridPane.rowIndex="3">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="10.0" prefWidth="231.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="327.0" minWidth="10.0" prefWidth="194.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="212.0" minWidth="10.0" prefWidth="175.0" />
+                <ColumnConstraints hgrow="SOMETIMES" />
+                <ColumnConstraints hgrow="SOMETIMES" />
+                  <ColumnConstraints hgrow="SOMETIMES" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -94,17 +116,17 @@
                <children>
                   <Button mnemonicParsing="false" onAction="#cadastrarEmprestimo" style="-fx-background-color: lightgray;" text="Cadastrar empréstimo" GridPane.halignment="CENTER">
                      <font>
-                        <Font name="Pagul" size="17.0" />
+                        <Font name="Pagul" size="18.0" />
                      </font>
                   </Button>
                   <Button mnemonicParsing="false" onAction="#cadastrarDevolucao" style="-fx-background-color: lightgray;" text="Cadastrar devolução" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                      <font>
-                        <Font name="Pagul" size="17.0" />
+                        <Font name="Pagul" size="18.0" />
                      </font>
                   </Button>
                   <Button mnemonicParsing="false" onAction="#gerarRelatorio" style="-fx-background-color: lightgray;" text="Gerar relatório" GridPane.columnIndex="2" GridPane.halignment="CENTER">
                      <font>
-                        <Font name="Pagul" size="17.0" />
+                        <Font name="Pagul" size="18.0" />
                      </font>
                   </Button>
                </children>
